universal norm smaller fixes

--- a/baseline_trials/instructionPage.html
+++ b/baseline_trials/instructionPage.html
@@ -238,7 +238,7 @@
 
     {{ if block2 == True and player.round_number == 15 }}
 
-        <p>In the next part, you will be paired with <strong>two other</strong> participants and there will be <strong>one change</strong>: You will know if the other participants also live in {{current_country}} or in one of the 40 countries around the globe which also participate in this study:</p>
+        <p>In the next decisions, you will be paired with <strong>two other</strong> participants and there will be <strong>one change</strong>: You will know if the other participants also live in {{current_country}} or in one of the 40 countries around the globe which also participate in this study:</p>
 
         <p>Algeria, Australia, Brazil, Chile, China, Ecuador, Egypt, Estonia, Finland, France, Germany, Greece, Hungary, India, Indonesia, Israel, Italy, Japan, Kazakhstan, Kenya, Korea, Malaysia, Mexico, Morocco, Nigeria, Norway, Pakistan, Peru, Philippines, Poland, Romania, Russia, Saudi Arabia, Singapore, South Africa, Spain, Switzerland, Taiwan, Thailand, Turkey, UAE, United States, Uruguay, Venezuela, Vietnam </p>
 
@@ -257,7 +257,6 @@
 
     {{ if block2 == True and treatment_type == '3PP' }}
 
-        <p>In the next decisions, you will know if the other participants also live in {{current_country}} or in one of the 40 countries which also participate in this study.</p>
         <p>As before, Person A decides how many of the 12 points to give to Person B and how many to keep (Stage 1). Person B does not make a decision.</p>
         <p>In Stage 2, <strong>Person C</strong> will be able to <strong>remove points</strong> from <strong>Person A</strong>. Person C receives 4 points and can use these points to remove points from Person A. For every <strong>1 point</strong> Person C uses, <strong>3 points</strong> will be removed from Person A.</p>
 
@@ -266,7 +265,6 @@
 
     {{ if block2 == True and treatment_type == '3PC' }}
 
-        <p>In the next decisions, you will know if the other participants also live in {{current_country}} or in one of the 40 countries which also participate in this study.</p>
         <p>As before, Person A decides how many of the 12 points to give to Person B and how many to keep (Stage 1). Person B does not make a decision.</p>
         <p>In Stage 2, <strong>Person C</strong> will be able to <strong>remove points</strong> from <strong>Person A</strong> OR <strong>give points</strong> to <strong>Person B</strong>. Person C receives 4 points and can use these points to remove points from Person A or give points to Person B. For every <strong>1 point</strong> Person C uses, Person A will lose <strong>3 points</strong> OR Person B will receive <strong>3 points</strong>.</p>
 
@@ -275,17 +273,17 @@
 
     {{ if block3 == True }}
 
-        <p>In the next part, you will be paired with <strong>two other</strong> participants and there will be <strong>one change</strong>: You will know <strong>in which specific country</strong> both of the other participants live.</p>
+        <p>In the next decisions, you will be paired with <strong>two other</strong> participants and there will be <strong>one change</strong>: You will know <strong>in which specific country</strong> both of the other participants live.</p>
 
         <p>[Picture of punish trial with flags and map, no practice trial]</p>
 
         <p>In this example, you are Person C, which is indicated by the red rectangle. Person A lives in Japan and Person B lives in Brazil.</p>
 
-        <p>As before, you will also sometimes be assigned to the role of Person A or Person B.</p>
+        <p> As before, you will also sometimes be assigned to the role of Person A or Person B.</p>
+
+        <p> Similarly as before, you will also sometimes be asked about the social acceptability of decisions.</p>
 
         <hr>
-
-        <p>In the next decisions, you will know in which country the two other participants live.</p>
 
         <p>As before, Person A decides how many of the 12 points to give to Person B and how many to keep (Stage 1). Person B does not make a decision.</p>
 
