interactive dictator instructions

--- a/baseline_trials/UniversalNormPage.html
+++ b/baseline_trials/UniversalNormPage.html
@@ -480,7 +480,7 @@
 
         <br>
 
-        <p style="font-size: 14px;" > You believe that in <span id="selected-number-display">None</span> out of 40 countries, most people also believe that it is {{recorded_norm}} to give {{ universal_norm_decision.receiver_gets }} points to Person B. </p>
+        <p style="font-size: 14px;" > You believe that in <span id="selected-number-display"> </span> out of 40 countries, most people also believe that it is {{recorded_norm}} to give {{ universal_norm_decision.receiver_gets }} points to Person B. </p>
 
 
 
