interactive instructions all but third party decisions

--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -539,7 +539,7 @@
 
     {% if role_switch_true == True %}
 
-        <p style="text-align: center;">
+        <p style="text-align: center; top: -5%; ">
             <b style="color: red;">ROLE SWITCH! You are now Person A!</b>
         </p>
 
