--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -296,6 +296,10 @@
                 // Update the hidden input field
                 $(`#selected-number-${index}`).val(value);
 
+                // Update the hidden input field for the selected action
+                let rowValue = row === "punish" ? 0 : 1; //because integer in python
+                $("#selected-action-" + index).val(rowValue);
+
                 // Store clicked values
                 lastClickedRowType = row;
                 lastClickedIndex = index;
@@ -934,6 +938,18 @@
         {{ formfield_errors 'TP_decision2' }}
         {{ formfield_errors 'TP_decision3' }}
 
+            {% if "comp" in player.treatment %}
+
+            <input type="hidden" name="punish_or_compensate1" id="selected-action-1">
+            <input type="hidden" name="punish_or_compensate2" id="selected-action-2">
+            <input type="hidden" name="punish_or_compensate3" id="selected-action-3">
+
+            {{ formfield_errors 'punish_or_compensate1' }}
+            {{ formfield_errors 'punish_or_compensate2' }}
+            {{ formfield_errors 'punish_or_compensate3' }}
+
+            {% endif %}
+
         {% endif %}
 
         {% if role_switch_true == True %}
@@ -1192,7 +1208,7 @@
                     <br>
                     <p> <strong>How many points do you <b style="color: red;"> {{ treatment_text_action_comp }} </b>  {{ treatment_text_receiver_comp }}? </strong> </p>
 
-                    <div class="number-row-comp" data-index="{{ TP_decision.index }}" data-row="compensate" data-input="selected-action-{{ TP_decision.index }}">
+                    <div class="number-row-comp" data-index="{{ TP_decision.index }}" data-row="compensate" data-input="selected-number-{{ TP_decision.index }}">
                         {{ for num in TP_points }}
                         <div class="number" data-value="{{ num }}" data-row="compensate" data-index="{{ TP_decision.index }}">{{ num }}</div>
                         {{ endfor }}
