--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -23,6 +23,7 @@
 
     const TP_points = {{ C.TP_points }}; // third party points
     const TP_eff = {{ C.TP_effectiveness }}; // punishment or reward or victim compensation effectiveness
+    const TP_cost = {{ C.TP_cost }}; // cost to the third party for punish or reward or compensation
 
     const TP_decisions = {{ TP_decisions | safe }};
     const TP_norm_decisions = {{ TP_norm_decisions | safe }};
@@ -192,9 +193,6 @@
         $('.receiverCountryMap').attr('src', '/static/global/worldmap/' + receiverCountry +'_map.png');
         $('.dictatorCountryMap').attr('src', '/static/global/worldmap/' + dictatorCountry +'_map.png');
 
-        // Set the default display text for TP cost
-        $('#TP-cost-display').text('_');
-
 
         // only in TP_decision conditions
         if (!current_treatment.includes("norm") ) {
@@ -204,6 +202,10 @@
                 const index = TP_decision.index;
                 const dictatorKeeps = TP_decision.dictator_keeps;
                 const receiverGets = TP_decision.receiver;
+
+                // Set the default display text for TP cost
+                $(`.TP-cost-display[data-index="${index}"]`).text('_');
+
 
                 // Fill initial coin stacks
                 // dictator stack
@@ -305,10 +307,10 @@
                 lastClickedIndex = index;
                 lastClickedValue = value;
 
-                costTP = formatNumber(value / 3)
+                costTP = formatNumber(value / TP_cost)
 
                 // Update the display text for TP cost
-                $('#TP-cost-display').text('' + costTP );
+                $(`.TP-cost-display[data-index="${index}"]`).text(costTP);
 
                 // Update the clicked stack
                 updateCoinStack(value, index, row);
@@ -1216,9 +1218,10 @@
                     {% endif %}
                 </div>
 
-
-            <div data-index="{{ TP_decision.index }}"> <p style="font-size: 14px;"> This costs you <span id="TP-cost-display"></span> point(s).</p> </div>
-
+            <div data-index="{{ TP_decision.index }}">
+                <p style="font-size: 14px;"> This costs you <span class="TP-cost-display" data-index="{{ TP_decision.index }}"></span> point(s).
+                </p>
+            </div>
 
             <hr>
             <br>
